k8s-repo/helm/kyverno/ubuntu.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ubuntu
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
      - name: test-ubuntu
        image: ubuntu:latest
        ports:
        - containerPort: 80
