k8s-repo/helm/kyverno/registry-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-image-registry
spec:
  validationFailureAction: enforce # enforce để bắt buộc chính sách
  background: true
  rules:
    - name: validate-image-registry
      match:
        resources:
          kinds:
            - Pod # Áp dụng cho tất cả các Pod
      validate:
        message: "Only images from 'vcr.infiniband.vn' are allowed."
        pattern:
          spec:
            containers:
              - image: "vcr.infiniband.vn/*" # Chỉ cho phép image từ registry này
